--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -902,7 +902,7 @@
   icon: "status_buff_special"
 "1211111":
   name: "Atk Charge"
-  description: "Increase atk by {{ effects.TurnBaseMultipleAttack.parameter.value | minus: 100 }} % per stack, +1 stack every time an ally deals damage (max 7 stack), reset stack when activating a skill"
+  description: "Increase atk by 2.5 to 5 % per stack (depending on passive level), +1 stack every time an ally deals damage (max 7 stack), reset stack when activating a skill"
   isGoodStatus: 2
   icon: "status_system_firepower"
 "3198101":
