Anni event page first draft

--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -233,6 +233,9 @@
 199:
   name: "Workout Combat Disc"
   description: "Disc of battle BGM for Santa Claus Workout."
+218:
+  name: "4th Anniversary Ticket"
+  description: "Ticket distributed for the 4th anniversary, which can be used in a special exchange."
 11033201:
   name: "Procy Santa Doll"
   description: "A gift of warm memories from a crybaby, laughing Santa. You can customize the battle model of Holy Frost Gomeisa"
