--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -587,5 +587,19 @@ the damage is capped at 90% own MAX HP"
 9000065: "At start of turn, grant Invention that will activates after 3 actions, granting another action for self. <br>\
 If there's already Invention granted, this skill won't activated"
 9000066: "Increase damage dealt to enemies based on number of debuffs on them (1 debuff +25%, max +100%)"
-
+9000068: "Base HP +3000, base atk +1000, damage received -250"
+9000070: "When ally with speed or special role has acted this turn, all allies atk +10%"
+9000073: "All allies do auto action at all times, all allies atk+50%"
+9000074: "When in Wait grants atk+30% and damage received +10%"
+9000075: "When an ally is damaged by another ally, grants atk+25% for one action to damaged ally"
+9000076: "When an ally has <50% HP, grants a barrier for 3 action and atk+20%"
+9000078: "When skill2 damage an enemy, give def down for 1 action to target"
+9000082: "At the start of battle, atk+10% for each different attribute allies"
+9000085: "When ally with speed or special role grants speed up to ally, apply 1 Atk up to target ally, <br>\
+when they deal speed down to enemy, apply 1 def down to target enemy"
+9000087: "Each time target takes damage apply +10% damage received debuff to target (max 100%), debuff removed when target takes action"
+9000089: "Increases damage taken by the opponent according to the total number of duration of debuffs on the enemy. <br>\
+(+10% per duration. Maximum 100%.)"
+9000090: "At the start of action, atk +10% times the number of buff duration target ally has (max 100%) for one action"
+9000091: "At the start of turn, atk +50% for all allies for one action"
 
