[ci skip] Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ e.txt
 /_data/EventMaster.json
 /_data/MasterDataCatalog.json
 /_charas2/
+/cdn/
 /_data/processed/SkillUpgradeMaster.json
 .DS_Store
 sales_report.txt
+greeting.sh
+test.html
