--- a/_config.yml
+++ b/_config.yml
@@ -58,12 +58,14 @@ collections:
 
 exclude:
   - "*.py"
+  - "*.pyc"
   - "assets/atlas.js"
   - "assets/atlas.joke.js"
   - readme.md
   - node_modules
   - CONTRIBUTING.md
   - ".git"
+  - tools/
   - "cdn/.git"
 
 compress_html:
