--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -1,21 +1,21 @@
 "1":
-  name: "Attack Up"
+  name: "ATK Up"
   description: "Multiply attack power by 1.5"
   isGoodStatus: 1
   icon: "status_atkup"
 "2":
-  name: "Defense Up"
+  name: "DEF Up"
   description: "For one hit, damage from opponent is halved"
   isGoodStatus: 1
   icon: "status_defup"
 "3":
-  name: "Speed Up"
+  name: "SPD Up"
   description: "Increase Speed by 10"
   isGoodStatus: 1
   icon: "status_agiup"
 "4":
   name: "Attention"
-  description: "Multiply own view status by 1.5"
+  description: "Multiply own View status by 1.5"
   isGoodStatus: 1
   icon: "status_attention"
 "5":
@@ -49,23 +49,23 @@
   isGoodStatus: 1
   icon: "status_regenerate"
 "11":
-  name: "Attack Down"
+  name: "ATK Down"
   description: "Multiply attack power by 0.5"
   isGoodStatus: 0
   icon: "status_atkdown"
 "12":
-  name: "Defense Down"
+  name: "DEF Down"
   description: "For one hit, multiply damage received by 1.5"
   isGoodStatus: 0
   icon: "status_defdown"
 "13":
-  name: "Speed Down"
-  description: "Decrease speed by 10"
+  name: "SPD Down"
+  description: "Decrease SPD by 10"
   isGoodStatus: 0
   icon: "status_agidown"
 "14":
   name: "Mosaic"
-  description: "Self view becomes 0"
+  description: "Self View becomes 0"
   isGoodStatus: 0
   icon: "status_mosaic"
 "15":
@@ -80,7 +80,7 @@
   icon: "status_unlucky"
 "17":
   name: "Over-consumption"
-  description: "Double the viewpoint cost of skills"
+  description: "Double the Viewpoint cost of skills"
   isGoodStatus: 0
   icon: "status_useless"
 "18":
@@ -94,8 +94,8 @@
   isGoodStatus: 0
   icon: "status_flame"
 "20":
-  name: "Super Speed Up"
-  description: "Increase Speed by 30"
+  name: "Super SPD Up"
+  description: "Increase SPD by 30"
   isGoodStatus: 1
   icon: "status_superagiup"
 "21":
@@ -105,7 +105,7 @@
   icon: "status_immunity"
 "22":
   name: "Silence"
-  description: "Prohibit the use of skills that cost viewpoint"
+  description: "Prohibit the use of skills that cost Viewpoint"
   isGoodStatus: 0
   icon: "status_silence"
 "23":
@@ -139,8 +139,8 @@
   isGoodStatus: 1
   icon: "b_skill_special"
 "29":
-  name: "Super Speed Down"
-  description: "Decrease speed by 30"
+  name: "Super SPD Down"
+  description: "Decrease SPD by 30"
   isGoodStatus: 0
   icon: "status_superagidown"
 "30":
@@ -154,8 +154,8 @@
   isGoodStatus: 1
   icon: ""
 "32":
-  name: "Item Effect: Atk Up"
-  description: "Atk increase with items"
+  name: "Item Effect: AK Up"
+  description: "ATK increase with items"
   isGoodStatus: 1
   icon: ""
 "33":
@@ -175,22 +175,22 @@
   icon: "b_skill_special"
 "36":
   name: "View Cost -3000"
-  description: "Reduce view cost by 3000"
+  description: "Reduce View cost by 3000"
   isGoodStatus: 1
   icon: "status_burst"
 "37":
-  name: "Bonus: Atk Up"
+  name: "Bonus: ATK Up"
   description: "Attack increase by quest bonus"
   isGoodStatus: 1
   icon: "status_burst"
 "38":
   name: "View Cost -2000"
-  description: "Reduce view cost by 2000"
+  description: "Reduce View cost by 2000"
   isGoodStatus: 1
   icon: "status_burst"
 "39":
   name: "View Cost +4000"
-  description: "Increase view cost by 4000"
+  description: "Increase View cost by 4000"
   isGoodStatus: 0
   icon: "status_burst"
 "40":
@@ -199,7 +199,7 @@
   isGoodStatus: 0
   icon: "status_burst"
 "41":
-  name: "Attack Up (Small)"
+  name: "ATK Up (Small)"
   description: "Multiply attack power by 1.1"
   isGoodStatus: 0
   icon: ""
@@ -250,7 +250,7 @@
   icon: "status_target"
 "51":
   name: "View consumption -18000"
-  description: "Reduce view consumption by 18000"
+  description: "Reduce View consumption by 18000"
   isGoodStatus: 1
   icon: "status_awakening"
 "52":
@@ -285,7 +285,7 @@
   icon: ""
 "58":
   name: "View Cost Increase"
-  description: "Increase view cost by {{ effects.NeedViewValueChange.parameter.value | abs }}"
+  description: "Increase View cost by {{ effects.NeedViewValueChange.parameter.value | abs }}"
   isGoodStatus: 0
   icon: "status_useless" 
 "59":
@@ -300,17 +300,17 @@
   icon: "" 
 "61":
   name: "Decrease View Cost"
-  description: "Reduce the amount of view consumed. Cannot be removed"
+  description: "Reduce the amount of View consumed. Cannot be removed"
   isGoodStatus: 1
   icon: "status_awakening" 
 "62":
   name: "Increase View Cost"
-  description: "Increase the amount of view consumed. Cannot be removed"
+  description: "Increase the amount of View consumed. Cannot be removed"
   isGoodStatus: 0
   icon: "status_useless" 
 "63":
   name: "Decrease View Cost"
-  description: "Reduce the amount of view consumed. Cannot be removed"
+  description: "Reduce the amount of View consumed. Cannot be removed"
   isGoodStatus: 0
   icon: "status_awakening" 
 "64":
@@ -325,12 +325,12 @@
   icon: "status_immunity" 
 "66":
   name: "Okitaka Special (Sidekick)"
-  description: "Increase Atk by {{ effects.MultipleAttack.parameter.value | minus: 100 }} %, Count based on the number of times this take effect, triggered for a maximum of 5 times "
+  description: "Increase ATK by {{ effects.MultipleAttack.parameter.value | minus: 100 }} %, Count based on the number of times this take effect, triggered for a maximum of 5 times "
   isGoodStatus: 2
   icon: "status_atkup" 
 "67":
   name: "Victom Special"
-  description: "Increase Atk based on current viewpoint for a maximum of 50% Atk"
+  description: "Increase ATK based on current Viewpoint for a maximum of 50% ATK"
   isGoodStatus: 2
   icon: "" 
 "68":
@@ -364,28 +364,28 @@
   isGoodStatus: 2
   icon: "b_skill_special" 
 "74":
-  name: "Reduce view Cost"
-  description: "Reduce view cost by {{ effects.NeedViewValueChange.parameter.value | abs }}"
+  name: "Reduce View Cost"
+  description: "Reduce View cost by {{ effects.NeedViewValueChange.parameter.value | abs }}"
   isGoodStatus: 2
   icon: "status_awakening" 
 "75":
-  name: "Atk Up (Small)"
-  description: "Increase Atk by 1.3 times"
+  name: "ATK Up (Small)"
+  description: "Increase ATK by 1.3 times"
   isGoodStatus: 1
   icon: "status_atkup" 
 "78":
   name: "Berserk"
-  description: "Increase Atk by 2 times. Reduce 15% of self max HP at end of turn. Force auto action"
+  description: "Increase ATK by 2 times. Reduce 15% of self max HP at end of turn. Force auto action"
   isGoodStatus: 1
   icon: "status_berserk"
 "79":
-  name: "Atk Increase"
-  description: "When appearing, increase Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} % for all allies, cannot be stacked"
+  name: "ATK Increase"
+  description: "When appearing, increase ATK by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} % for all allies, cannot be stacked"
   isGoodStatus: 2
   icon: "status_atkup" 
 "82":
   name: "Concert"
-  description: "Increase number of Views earned by View acquisition skill by 1.5 times"
+  description: "Increase number of View earned by View acquisition skill by 1.5 times"
   isGoodStatus: 2
   icon: "status_concert"
 "84":
@@ -430,12 +430,12 @@
   icon: "status_atkup"
 "101":
   name: "Lilac Special"
-  description: "Increase allies Atk by 2% for every 1 current combo(max 50%)"
+  description: "Increase allies ATK by 2% for every 1 current combo(max 50%)"
   isGoodStatus: 2
   icon: ""
 "104":
   name: "Uplift"
-  description: "Increase Atk by 50% for one action, this status doesn't count as a buff"
+  description: "Increase ATK by 50% for one action, this status doesn't count as a buff"
   isGoodStatus: 2
   icon: ""
 "105":
@@ -455,7 +455,7 @@
   icon: ""
 "114":
   name: "Roiker Special"
-  description: "Increase Atk by {{ effects.StatusNumberMultipleAttack.parameter.statusMult }} % for each buff you currently have, max 4 buff."
+  description: "Increase ATK by {{ effects.StatusNumberMultipleAttack.parameter.statusMult }} % for each buff you currently have, max 4 buff."
   isGoodStatus: 2
   icon: ""
 "115":
@@ -571,13 +571,13 @@
   isGoodStatus: 2
   icon: ""
 "152":
-  name: "Invention: Atk up"
-  description: "Start with 3 turn, when turn is 0 grant target 10% atk up permanently, turn cannot be extended by any means."
+  name: "Invention: ATK up"
+  description: "Start with 3 turn, when turn is 0 grant target 10% ATK up permanently, turn cannot be extended by any means."
   isGoodStatus: 1
   icon: "status_countdown_buff"
 "153":
-  name: "Invention: Def up"
-  description: "Start with 3 turn, when turn is 0 grant target 10% def up permanently, turn cannot be extended by any means."
+  name: "Invention: DEF up"
+  description: "Start with 3 turn, when turn is 0 grant target 10% DEF up permanently, turn cannot be extended by any means."
   isGoodStatus: 1
   icon: "status_countdown_buff"
 "154":
@@ -607,7 +607,7 @@
   icon: ""
 "165":
   name: "Super Regeneration"
-  description: "Recover 30% max hp at the end of the turn, cannot be dispelled."
+  description: "Recover 30% max HP at the end of the turn, cannot be dispelled."
   isGoodStatus: 2
   icon: ""
 "183":
@@ -617,7 +617,7 @@
   icon: ""
 "185":
   name: "Haki"
-  description: "When removed increase Atk by 10% for every stack (max 100% increase) at the next turn, removed at the end of this turn, neither buff nor debuff"
+  description: "When removed increase ATK by 10% for every stack (max 100% increase) at the next turn, removed at the end of this turn, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
 "202":
@@ -652,12 +652,12 @@
   icon: ""
 "221":
   name: "Steel Fist"
-  description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
+  description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get DEF Up buff"
   isGoodStatus: 2
   icon: ""
 "224":
   name: "Cheer"
-  description: "Atk +10%, doesn't stack, only the highest effect applies, neither a buff nor debuff"
+  description: "ATK +10%, doesn't stack, only the highest effect applies, neither a buff nor debuff"
   isGoodStatus: 2
   icon: "b_skill_special"
 "238":
@@ -682,7 +682,7 @@
   icon: "status_defdown"
 "274":
   name: "Fit"
-  description: "Increase Atk by 30% of receiver's base VP, min 500 up to 1500 Atk"
+  description: "Increase ATK by 30% of receiver's base VP, min 500 up to 1500 ATK"
   isGoodStatus: 0
   icon: "status_atkup"
 "275":
@@ -702,7 +702,7 @@
   icon: "status_immunity"
 "1001101":
   name: "Fighting Spirit"
-  description: "Gain 1 stack when invoker cause damage to enemy, every stack increase atk by 2.5% (max 20 stack), neither buff nor debuff"
+  description: "Gain 1 stack when invoker cause damage to enemy, every stack increase ATK by 2.5% (max 20 stack), neither buff nor debuff"
   isGoodStatus: 1
   icon: "status_system_firepower"
 "1010202":
@@ -712,7 +712,7 @@
   icon: "b_skill_special"
 "1014203":
   name: "Excavation"
-  description: "Reduce stack by 1 every time target take damage, when 0 stack, remove excavation and apply def down+ (increase damage received by 1.8x) to target"
+  description: "Reduce stack by 1 every time target take damage, when 0 stack, remove excavation and apply DEF Down+ (increase damage received by 1.8x) to target"
   isGoodStatus: 2
   icon: "status_costumedamage"
 "1015201":
@@ -731,8 +731,8 @@
   isGoodStatus: 2
   icon: ""
 "1020201":
-  name: "Atk Accumulation"
-  description: "Atk+10%, if atk accumulation already exist add atk+10% to existing accumulation and reset turn count (max +100%)."
+  name: "ATK Accumulation"
+  description: "ATK+10%, if atk accumulation already exist add atk+10% to existing accumulation and reset turn count (max +100%)."
   isGoodStatus: 2
   icon: "status_firepower"
 "1031201":
@@ -752,12 +752,12 @@
   icon: ""
 "1033101":
   name: "Sunlight"
-  description: "Atk+20% for 1 action"
+  description: "ATK+20% for 1 action"
   isGoodStatus: 2
   icon: "status_system_atkup"
 "1033102":
   name: "Fresh Green"
-  description: "When under 50% HP remove this status and heal by {{ effects.OneTimeHeal.parameter.value }} % Atk of the invoker of this status"
+  description: "When under 50% HP remove this status and heal by {{ effects.OneTimeHeal.parameter.value }} % ATK of the invoker of this status"
   isGoodStatus: 2
   icon: "status_regenerate"
 "1034101":
@@ -777,7 +777,7 @@
   icon: "b_skill_special"
 "1051202":
   name: "Waltz"
-  description: "Atk+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
+  description: "ATK+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
   isGoodStatus: 1
   icon: "status_buff_special"
 "1051205":
@@ -787,7 +787,7 @@
   icon: ""
 "1064202":
   name: "Limelight"
-  description: "Increase Atk by 40% of View status. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
+  description: "Increase ATK by 40% of View status. Minimum ATK+500, max ATK+3000, neither buff nor debuff"
   isGoodStatus: 1
   icon: "status_buff_special"
 "1081201":
@@ -822,7 +822,7 @@
   icon: "status_hide"
 "1140203":
   name: "Water Mass Compression"
-  description: "Atk up by 15%*Gauge (max 75%), neither buff nor debuff, cannot be removed"
+  description: "ATK up by 15%*Gauge (max 75%), neither buff nor debuff, cannot be removed"
   isGoodStatus: 1
   icon: "status_wait_pwup_5"
 "1160201":
@@ -832,7 +832,7 @@
   icon: "status_debuff_special"
 "1160204":
   name: "Onslaught"
-  description: "[When enemy(s) has Bullet Mark at the end of the turn] deals damage to enemy(s) with Bullet Mark equal to 30%+Bullet Mark*10% Atk, remove all Bullet Mark, doesn't gain view or combo from this action"
+  description: "[When enemy(s) has Bullet Mark at the end of the turn] deals damage to enemy(s) with Bullet Mark equal to 30%+Bullet Mark*10% ATK, remove all Bullet Mark, doesn't gain View or combo from this action"
   isGoodStatus: 0
   icon: "b_skill_special"
 "1169101":
@@ -852,12 +852,12 @@
   icon: "status_silence"
 "1192101":
   name: "Astar Buff"
-  description: "Atk +20%."
+  description: "ATK +20%."
   isGoodStatus: 2
   icon: ""
 "1199101":
   name: "Forged"
-  description: "Increase Atk of all allies by 5% every 2 stack, neither a buff nor debuff"
+  description: "Increase ATK of all allies by 5% every 2 stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
 "1122201":
@@ -901,22 +901,22 @@
   isGoodStatus: 2
   icon: "status_buff_special"
 "1211111":
-  name: "Atk Charge"
+  name: "ATK Charge"
   description: "Increase atk by 2.5 to 5 % per stack (depending on passive level), +1 stack every time an ally deals damage (max 7 stack), reset stack when activating a skill"
   isGoodStatus: 2
   icon: "status_system_firepower"
 "3198101":
-  name: "Overall Atk+"
-  description: "Increase all allies Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} %, doesn't stack with same effect buff"
+  name: "Overall ATK+"
+  description: "Increase all allies ATK by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} %, doesn't stack with same effect buff"
   isGoodStatus: 2
   icon: "status_atkup"
 "3198102":
-  name: "Overall Atk+"
-  description: "Increase Atk by a certain percentage, cannot be stacked, effect with the highest % takes precedent"
+  name: "Overall ATK+"
+  description: "Increase ATK by a certain percentage, cannot be stacked, effect with the highest % takes precedent"
   isGoodStatus: 2
   icon: "status_system_atkup"
 "3199101":
-  name: "Atk+"
-  description: "Increase Atk by {{ effects.MultipleAttack.parameter.value | minus: 100 }} %,removed after turn end, neither buff nor debuff%"
+  name: "ATK+"
+  description: "Increase ATK by {{ effects.MultipleAttack.parameter.value | minus: 100 }} %, removed after turn end, neither buff nor debuff%"
   isGoodStatus: 2
   icon: "status_system_atkup"
