--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -790,16 +790,21 @@
   description: "Increase ATK by 40% of View status. Minimum ATK+500, max ATK+3000, neither buff nor debuff"
   isGoodStatus: 1
   icon: "status_buff_special"
-"1081201":
-  name: "Buff Count"
-  description: "Act as number counter"
+"1073208":
+  name: "Enhancement Count"
+  description: "Pubraseer variant special status"
   isGoodStatus: 2
-  icon: ""
+  icon: "status_buff_special"
 "1075211":
   name: "Assault"
   description: "Increase atk by 5% per buff duration removed(Max 50%)"
   isGoodStatus: 2
   icon: "status_buff_special"
+"1081201":
+  name: "Buff Count"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
 "1101201":
   name: "Rain Blessing"
   description: "Increase atk by 5% per stack(Max 5 stack), remove 1 stack at the end of turn"
