--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -794,7 +794,7 @@
   name: "Enhancement Count"
   description: "Pubraseer variant special status"
   isGoodStatus: 2
-  icon: "status_buff_special"
+  icon: "b_skill_special"
 "1075211":
   name: "Assault"
   description: "Increase atk by 5% per buff duration removed(Max 50%)"
