--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -936,6 +936,7 @@
 3073104: Innocent Hero IV
 3073105: Innocent Hero V
 3073106: Innocent Hero VI
+8073203: Asteria Odigos
 # Okitaka
 1075101: Circumstance Strategy
 1075102: Mighty Warrior Stratagem
