--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -349,7 +349,7 @@ extra damage has maximum of 10 tier as follows from 1-10 buffs duration (4% 16% 
 8073201: "[constant activation] Each time a skill that increases the combo count is activated, {{ 1073208 | status_description }} +1"
 8073202: "[when combo reach a multiple of 5] {{ 1073208 | status_description }} +2"
 8073203: "[base skill] (activated 1-3 times based on {{ 1073208 | status_description }}) Consume 2 {{ 1073208 | status_description }}, Deal 50% of damage to target enemy and Heal 50% of damage to ally with the lowest HP <br>\ 
-This skill can only be activated once per turn"
+This skill can only be activated once per turn /100%"
 8073204: ""
 8073205: ""
 8073207: ""
