--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -880,6 +880,16 @@
   description: "Reduce speed by 10 per stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"1191101":
+  name: "Obsession"
+  description: "Gaisei special status"
+  isGoodStatus: 2
+  icon: "b_skill_special"
+"1191102":
+  name: "Combat Frenzy"
+  description: "Enhance Skill 1"
+  isGoodStatus: 2
+  icon: "b_skill_special"
 "1207104":
   name: "Bygul Special2"
   description: "Increase HP recovery of recovery skill used by invoker by {{ effects.HealMultipleAttack.parameter.value | minus: 100 }} %"
