--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -887,7 +887,7 @@
   icon: "b_skill_special"
 "1191102":
   name: "Combat Frenzy"
-  description: "Enhance Skill 1"
+  description: "Change skill 1 to Ruin"
   isGoodStatus: 2
   icon: "b_skill_special"
 "1207104":
