--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1436,6 +1436,8 @@
 3190106: Dependable Disposition VI
 8190101: Omnes Clavis
 8190102: Yohack Auto
+# Gaisei
+8191105: Ruin
 # Astar
 1192101: Adventskranz
 1192102: Christmas march
