--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -106,19 +106,19 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 [base skill] Apply {{ 1191101 | status_description }} to target enemy /100%"
 1191102: "[base skill] Deal 70% of damage to all enemies /100% <br>\
 [when target has debuff(s)] Deal 105% of damage to enemy(s) instead /100% <br>\
-[when target has {{ 1191101 | status_description }}] Also activate Reaper's Blade if self is still alive /100%"
-1191103: "[base skill] Apply {{ 3 | status_description } to target enemy for 1 turn(s) /100% <br>\
-[base skill] Apply {{ 1191102 | status_description } to self for 2 action /100% <br>\
-[base skill] Apply {{ 5 | status_description } to self for 1 turn /100%"
+[when target has {{ 1191101 | status_description }} ] Also activate Reaper's Blade if self is still alive /100%"
+1191103: "[base skill] Apply {{ 3 | status_description }} to target enemy for 1 turn(s) /100% <br>\
+[base skill] Apply {{ 1191102 | status_description }} to self for 2 action /100% <br>\
+[base skill] Apply {{ 5 | status_description }} to self for 1 turn /100%"
 1191104: "[base skill] Deal 70% of damage to all enemies /100% <br>\
 [when target has debuff(s)] Deal 105% of damage to enemy(s) instead /100% <br>\
-[when target has {{ 1191101 | status_description }}] Also activate Reaper's Blade if self is still alive /100%"
-8191101: "[base skill] (extra_cond: for target enemy(s) possessing x > 0  {{ 1191101 | status_description }}) Deal 60% of damage to target enemy(s) /100% <br>\
+[when target has {{ 1191101 | status_description }} ] Also activate Reaper's Blade if self is still alive /100%"
+8191101: "[base skill] (extra_cond: for target enemy(s) possessing x > 0  {{ 1191101 | status_description }} ) Deal 60% of damage to target enemy(s) /100% <br>\
 [base skill] Remove all {{ 1191101 | status_description }} status from all enemies /100%"
 8191103: "[when self take damage from an enemy] counter with Skill 1 <br>\
 [when self take damage from an ally] activate Skill 1 against a random single enemy."
 8191104: "[constant activation] Increases the likelihood of being targeted by enemies."
-8191105: "[when self has {{ 1191102 | status_description }] skill 1 changes into: <br>\
+8191105: "[when self has {{ 1191102 | status_description }} ] skill 1 changes into: <br>\
 [base skill] Deal 140%-280% of damage to target enemy as HP go from 100% to 0% /100% <br>\
 [base skill] Apply {{ 1211101 | status_description }} to target enemy /100% <br>\
 [base skill] Apply {{ 1191101 | status_description }} to target enemy /100%"
