--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -116,7 +116,8 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8191101: "[base skill] (extra_cond: for target enemy(s) possessing x > 0  {{ 1191101 | status_description }} ) Deal 60% of damage to target enemy(s) /100% <br>\
 [base skill] Remove all {{ 1191101 | status_description }} status from all enemies /100%"
 8191103: "[when self take damage from an enemy] counter with Skill 1 <br>\
-[when self take damage from an ally] activate Skill 1 against a random single enemy."
+[when self take damage from an ally] activate Skill 1 against a random single enemy. <br>\
+VP is not gained by this counter, max 4 times in a single turn"
 8191104: "[constant activation] Increases the likelihood of being targeted by enemies."
 8191105: "[when self has {{ 1191102 | status_description }} ] skill 1 changes into: <br>\
 [base skill] Deal 140%-280% of damage to target enemy as HP go from 100% to 0% /100% <br>\
