--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -920,6 +920,11 @@
   description: "Increase atk by 2.5 to 5 % per stack (depending on passive level), +1 stack every time an ally deals damage (max 7 stack), reset stack when activating a skill"
   isGoodStatus: 2
   icon: "status_system_firepower"
+"1217101":
+  name: "Gravity"
+  description: "Reduce View consumption by 10%, when the invoker of this effect ends their action, if the character that received Gravity has not acted yet, grant them SPD Up for one action. Remove this status when the invoker is defeated."
+  isGoodStatus: 2
+  icon: "b_skill_special"
 "3198101":
   name: "Overall ATK+"
   description: "Increase all allies ATK by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} %, doesn't stack with same effect buff"
