--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -348,6 +348,30 @@ extra damage has maximum of 10 tier as follows from 1-10 buffs duration (4% 16% 
 8101102: "[when a skill that increases the combo count is activated] further increase the combo count by 1. This effect does not stack with similar effects"
 8217101: ""
 8217102: ""
+3217101: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+If similar effects overlap, only the highest effect is applied <br>\
+[AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
+[AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
+3217102: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+If similar effects overlap, only the highest effect is applied <br>\
+[AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
+[AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
+3217103: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+If similar effects overlap, only the highest effect is applied <br>\
+[AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
+[AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
+3217104: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+If similar effects overlap, only the highest effect is applied <br>\
+[AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
+[AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
+3217105: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+If similar effects overlap, only the highest effect is applied <br>\
+[AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
+[AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
+3217106: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+If similar effects overlap, only the highest effect is applied <br>\
+[AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
+[AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
 
 # Polaris Mask S1 Skevo
 1015105: "[base skill] Deal 60% of damage to target enemy /100% <br>\
@@ -562,6 +586,21 @@ Damage is proportional to how many enemy(s) hit:<br>\
 # Yoshiori variant passive
 8072202: "[when taking damage] Apply {{ 215 | status_description }} to self for 1 turn(s) /100%<br>"
 8072203: ""
+
+# Yotaro passive
+3218101: "[after activating a skill that deal damages] Apply {{ 1 | status_description }} to self for 1 action /15% <br>\
+Make self more likely to be targeted by enemies"
+3218102: "[after activating a skill that deal damages] Apply {{ 1 | status_description }} to self for 1 action /18% <br>\
+Make self more likely to be targeted by enemies"
+3218103: "[after activating a skill that deal damages] Apply {{ 1 | status_description }} to self for 1 action /21% <br>\
+Make self more likely to be targeted by enemies"
+3218104: "[after activating a skill that deal damages] Apply {{ 1 | status_description }} to self for 1 action /24% <br>\
+Make self more likely to be targeted by enemies"
+3218105: "[after activating a skill that deal damages] Apply {{ 1 | status_description }} to self for 1 action /27% <br>\
+Make self more likely to be targeted by enemies"
+3218106: "[after activating a skill that deal damages] Apply {{ 1 | status_description }} to self for 1 action /30% <br>\
+Make self more likely to be targeted by enemies"
+8218101: "Make self more likely to be targeted by enemies"
 
 # Zaniah S2
 1182102: "[base skill] Deal 60% of damage to target ally. Gain damage x400 worth of View. /100%<br>\
