--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -348,27 +348,27 @@ extra damage has maximum of 10 tier as follows from 1-10 buffs duration (4% 16% 
 8101102: "[when a skill that increases the combo count is activated] further increase the combo count by 1. This effect does not stack with similar effects"
 8217101: ""
 8217102: ""
-3217101: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+3217101: "[After using skill 2] grant all allies {{ 'status_atkup' | status_manual: 'Overall ATK+', 'Increase all allies ATK by 5%, not stack with same effect buff' }} for 2 turns <br>\
 If similar effects overlap, only the highest effect is applied <br>\
 [AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
 [AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
-3217102: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+3217102: "[After using skill 2] grant all allies {{ 'status_atkup' | status_manual: 'Overall ATK+', 'Increase all allies ATK by6%, not stack with same effect buff' }} for 2 turns <br>\
 If similar effects overlap, only the highest effect is applied <br>\
 [AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
 [AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
-3217103: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+3217103: "[After using skill 2] grant all allies {{ 'status_atkup' | status_manual: 'Overall ATK+', 'Increase all allies ATK by 7%, not stack with same effect buff' }} for 2 turns <br>\
 If similar effects overlap, only the highest effect is applied <br>\
 [AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
 [AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
-3217104: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+3217104: "[After using skill 2] grant all allies {{ 'status_atkup' | status_manual: 'Overall ATK+', 'Increase all allies ATK by 8%, not stack with same effect buff' }} for 2 turns <br>\
 If similar effects overlap, only the highest effect is applied <br>\
 [AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
 [AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
-3217105: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+3217105: "[After using skill 2] grant all allies {{ 'status_atkup' | status_manual: 'Overall ATK+', 'Increase all allies ATK by 9%, not stack with same effect buff' }} for 2 turns <br>\
 If similar effects overlap, only the highest effect is applied <br>\
 [AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
 [AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
-3217106: "[After using skill 2] grant all allies {{ 3198101 | status_description }} for 2 turns <br>\
+3217106: "[After using skill 2] grant all allies {{ 'status_atkup' | status_manual: 'Overall ATK+', 'Increase all allies ATK by 10%, not stack with same effect buff' }} for 2 turns <br>\
 If similar effects overlap, only the highest effect is applied <br>\
 [AI choose target] (extra_cond: Enemy count=1) Prioritize skill 3 /100% <br>\
 [AI choose target] (extra_cond: Enemy count>1) Prioritize skill 2 /100%"
