--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -936,7 +936,11 @@
 3073104: Innocent Hero IV
 3073105: Innocent Hero V
 3073106: Innocent Hero VI
-8073203: Asteria Odigos
+1073201: Fos Odigós
+1073202: ánoix Méllon
+1073203: Pénte Anamniseis
+1073204: Pénte Anamniseis
+8073203: Astéria Odigós
 # Okitaka
 1075101: Circumstance Strategy
 1075102: Mighty Warrior Stratagem
