--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1441,7 +1441,21 @@
 8190101: Omnes Clavis
 8190102: Yohack Auto
 # Gaisei
+1191101: Shattered Remains
+1191102: Frantic Blade Dance
+1191103: Destruction Demon Claw - First Form
+1191104: Frantic Blade Dance+
+2191101: Fatal Injury Blade
+2191102: Fatal Injury Blade+
+2191103: Fatal Injury Blade++
+3191101: Master of Martial Arts I
+3191102: Master of Martial Arts II
+3191103: Master of Martial Arts III
+3191104: Master of Martial Arts IV
+3191105: Master of Martial Arts V
+3191106: Master of Martial Arts VI
 8191101: Reaper's Blade
+8191103: Counter
 8191105: Ruin
 # Astar
 1192101: Adventskranz
@@ -1489,6 +1503,30 @@
 3207105: Newcomer who loves his peers V
 3207106: Newcomer who loves his peers VI
 8207104: Bygul Auto
+# Orbiter
+1217101: Astral Sphere
+1217102: Zero Repulsion
+1217103: Gravity Well
+1217104: Astral Sphere+
+2217101: Lift Off!
+2217102: Lift Off!+
+2217103: Lift Off!++
+3217101: Zero Gravity Great Adventure I
+3217102: Zero Gravity Great Adventure II
+3217103: Zero Gravity Great Adventure III
+3217104: Zero Gravity Great Adventure IV
+3217105: Zero Gravity Great Adventure V
+3217106: Zero Gravity Great Adventure VI
+# Yotaro
+2217101: Like Rubbing Salt in Wound
+2217102: Like Rubbing Salt in Wound+
+2217103: Like Rubbing Salt in Wound++
+3217101: The Resourcefulness of a Young Antique Dealer I
+3217102: The Resourcefulness of a Young Antique Dealer II
+3217103: The Resourcefulness of a Young Antique Dealer III
+3217104: The Resourcefulness of a Young Antique Dealer IV
+3217105: The Resourcefulness of a Young Antique Dealer V
+3217106: The Resourcefulness of a Young Antique Dealer VI
 # Player
 2999101: Exceptional Good Luck
 2999102: Exceptional Good Luck+
