--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -110,3 +110,13 @@
   en: "Takahiro Fujiwara"
 "小林親弘":
   en: "Chikahiro Kobayashi"
+"内山夕実":
+  en: "Yumi Uchiyama"
+"落合福嗣":
+  en: "Fukushi Ochiai"
+"榎木淳弥":
+  en: "Junya Enoki"
+"宮田幸季":
+  en: "Kōki Miyata"
+"平川大輔":
+  en: "Daisuke Hirakawa"
