--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -695,6 +695,11 @@
   description: "When taking damage, counter with S1"
   isGoodStatus: 1
   icon: "status_counter"
+"281":
+  name: "Debuff Immunity"
+  description: "Debuff immunity+{{ effects.RegistDebuff.parameter.value }}"
+  isGoodStatus: 1
+  icon: "status_immunity"
 "287":
   name: "Nullify Silence"
   description: "Cannot be silenced"
