Add python deps

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: 3.12
+        cache: 'pip'
     - name: Generate data files
       run: |
         python tools/skill_evo.py
