--- a/.github/workflows/update-masterdata.yml
+++ b/.github/workflows/update-masterdata.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - name: Download master data
         run: |
           python tools/masterdata.py
