--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Generate data files
       run: |
         python -m pip install -r requirements.txt
+        python tools/translation_download_tsv.py
         python tools/skill_evo.py
     - name: Build the site in the jekyll/builder container
       run: |
