Skill Description Revamp (#194)
Move skill/status translation to Google sheet for manual translations
General skill/status UI improvement
Enhance chara page collection filter
Add auto passive filter for sidekick list
Delete some old code/data files

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch: ~
   push:
     branches: [ master ]
+  schedule:
+    - cron: '0 */6 * * *'
 
 jobs:
   build:
@@ -21,6 +23,7 @@ jobs:
     - name: Generate data files
       run: |
         python -m pip install -r requirements.txt
+        python tools/translation_download_tsv.py
         python tools/skill_evo.py
     - name: Build the site in the jekyll/builder container
       run: |
