--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -35,7 +35,7 @@ jobs:
         ruby-version: '3.3'
         bundler-cache: true
     - name: Install dependencies
-      run: bundle install jekyll jemoji jekyll-redirect-from fastimage
+      run: bundle install
     - name: Build site
       run: JEKYLL_ENV=production bundle exec jekyll build --future
 
