--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -236,6 +236,9 @@
 218:
   name: "4th Anniversary Ticket"
   description: "Ticket distributed for the 4th anniversary, which can be used in a special exchange."
+225:
+  name: "Fishes of the Ocean Planet"
+  description: "Colorful fishes caught in the desolate sea region. They can be exchanged for items in the event shop."
 11033201:
   name: "Procy Santa Doll"
   description: "A gift of warm memories from a crybaby, laughing Santa. You can customize the battle model of Holy Frost Gomeisa"
