--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install Dependencies
       if: ${{ github.event_name == 'pull_request' }}
       run: |
-        npm ci --ignore-scripts
+        npm ci
 
     - name: Generate data files
       run: |
